# Thousand

./: .gitignore  dataset-strategy.md  dev-data-strategy.md  folder-structure.md  package.json  prototype-plan.md  synth-ehr-build-plan.md
brand/: README.md
ml/prototype_a/: README.md  build_report.py  classification.json  classification.md  classify_cases.py  ddx.py  fetch_cases.py  gold.json  gold_all.json  human_classification.json  prepare_cases.py  pyproject.toml  results_haiku.md  results_opus.md  results_sonnet.md
ml/prototype_a/prompts/: ddx_v1.txt
ml/prototype_b/: aki_test.py  aki_test_assist.py  aki_test_clean.py  aki_test_extract.py  aki_test_nephro.py  aki_test_nephro_top30.py  audit_leaks_llm.py  build_team_report.py  cherry_pick.py  (+24 more)
outreach/: build_tracker.py  outreach_tracker.xlsx
papers/: 02_Dalal2024_adverse-dx-events.md  02b_Hoste2015_AKI-EPI.md  04_Gunderson2020_harmful-dx-errors-meta.md  10_SaberTehrani2013_25yr-malpractice.md  16_Greci2003_HbA1c-case-finding.md  17_Ferris2009_unlabeled-CKD.md  18_Stein1991_PIOPED.md  44_AlJaghbeer2018_AKI-CDSS.md  46_Walen2020_PE-delayed-dx.md  53_MeyersTrivedi2024_HRA-12B.md  54_StreamlineHealth2023_DRG-case-study.md  55_ACDIS2024_CDI-week-survey.md  56_ClarisHealth_PI-contingency-rate.md  57_SmarterDx_revenue-per-discharge.md  59_AHIMA2013_state-of-HIM.md  60_BlackBook2018_CDI-outsourcing.md  download_report.md  key_findings.md  sam_calculation.md  sam_calculation_reference.md  som_calculation.md  tam_calculation.md
web/: next.config.ts  open-next.config.ts  package-lock.json  package.json  wrangler.jsonc
(+20 files in other folders)
